# agent-ui

./: .env.sample  .gitignore  Makefile  README.md  agentos_config.yaml  main.py  main_agentos.py  pyproject.toml  tailwind.config.ts
agents/: __init__.py  basic_agent.py  basic_agents.yaml  know_agent.py  mcp_agent.py
agents/estimation/: __init__.py
app/: Agent_Sol.py
app/api/: agent.py
app/components/: log.py  sidebar.py
app/pages/: 1_Chat.py  9_Test.py
instructions/: estimation_guidance.md  pricing_guidance.md  resourcing_guidance.md
lib/: __init__.py  database.py  knowledge.py  model.py
mcp_gen/: client.py  server.py
scratch/: agent_filetools.py  humaninloop.py  humaninloop_2.py  knowledge1.ipynb  knowledge1.py  mcptest1.ipynb  memorytest.ipynb  my_os.py  state_shopping.py  team.py
src/components/chat/ChatArea/Messages/: ChatBlankState.tsx
src/components/chat/Sidebar/: Sidebar.tsx
src/components/ui/icon/: constants.tsx
team/: solutioning.py
test/: agent_rag.py  team_solution.py
tmp/: example.db
types/: solution.py
