[project]
name = "agent-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol>=0.1.9",
    "agno>=2.0.6",
    "ddgs>=9.6.0",
    "fastapi>=0.116.2",
    "google-genai>=1.38.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lancedb>=0.25.0",
    "mcp[cli]>=1.14.0",
    "ollama>=0.5.4",
    "openai>=1.108.0",
    "pgvector>=0.4.1",
    "psycopg[binary,pool]>=3.2.10",
    "pydash>=8.0.5",
    "pypdf>=6.0.0",
    "python-box>=7.3.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
]
